testsuite/tests/annotations/should_fail/annfail04.stderr
annfail04.hs:14:12: error: [GHC-28914]
    • Level error: instance for ‘Thing Int’ is bound at level 0
      but used at level -1
    • In the annotation: {-# ANN f (thing :: Int) #-}

